[package]
name = "pico-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }


[profile.release]
strip = true           # Strip symbols from binary
opt-level = "z"        # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel code generation units to increase optimizations
panic = "abort"       # Remove panic unwinding code
